# Amethyst

./: .gitignore  .gitmodules  CMakeLists.txt  conandata.yml
Launcher/: CMakeLists.txt  main.cpp
Logging/: CMakeLists.txt
Logging/include/Logging/: log.hpp
Logging/src/: lib.cpp
cmake/: ImGui.cmake
inc/Amethyst/: Amethyst.hpp  SimpleUI.hpp  Storage.hpp
inc/Amethyst/Compat/: KDABNlomannCompat.hpp
inc/Amethyst/Module/BiliHelper/: Constants.hpp  SimpleTypes.hpp  UserManager.hpp
inc/Amethyst/Module/BiliHelper/Network/: Client.hpp  RequestTypes.hpp  ResponseTypes.hpp  WbiCheck.hpp
inc/Amethyst/Module/BiliHelper/Ui/: BiliLive.hpp
inc/Amethyst/Prelude/: json.hpp
src/: Amethyst.cpp  Storage.cpp
src/Module/BiliHelper/: UserManager.cpp
src/Module/BiliHelper/Network/: Client.cpp  WbiCheck.cpp
test/: CMakeLists.txt
